src/objects/BookingEstimateItem__c.object
<CustomObject>
    <description>Details Estimate for Booking</description>
    <fields>
        <fullName>A__c</fullName>
        <formula>IF ( Not(NoneAccount__c) , IMAGE(&quot;/resource/&quot; &amp; $Setup.CommDefine__c.AppNS__c &amp; &quot;A&quot;,&quot;&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>このレコードは集計の対象に含まれています</inlineHelpText>
        <label>A</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccMstDPName__c</fullName>
        <label>会計DP名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccMstGPName__c</fullName>
        <label>会計GP名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccMstOPName__c</fullName>
        <label>会計OP名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountOutside__c</fullName>
        <formula>IF( NoneAccount__c , 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$集計対象外</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActionType__c</fullName>
        <description>普通の商品は　デフォルト値：通常で設定する、特別商品に対して、別々、商品種別に設定する
前受付金の場合、会計商品マスたに、価格はNull設定して、入力画面に自由入力する</description>
        <label>商品処理種別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>通常</fullName>
                    <default>true</default>
                    <label>通常</label>
                </value>
                <value>
                    <fullName>前受付金</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>商品の数量を入力してください</inlineHelpText>
        <label>数量</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BatchProcessStatusDiv__c</fullName>
        <description>増税処理するため、データ処理される状態を標識する、画面へ非表示する</description>
        <label>バッチ処理区分</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CookInfo__c</fullName>
        <label>料理進捗情報</label>
        <length>24000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DPChange__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>#DP</label>
        <referenceTo>DP__c</referenceTo>
        <relationshipLabel>会計マスタ (#DP)</relationshipLabel>
        <relationshipName>BookingEstimateItem71c4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EnProductName__c</fullName>
        <label>商品名称（英）</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field10__c</fullName>
        <label>小計割引／割増</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <label>ﾌﾘｰ宣言</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>商品コード</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FoodDetailFlg__c</fullName>
        <formula>refAccountMaster__r.CookCount__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$会席商品フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GPChange__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>集計先変更定義</inlineHelpText>
        <label>#GP</label>
        <referenceTo>GP__c</referenceTo>
        <relationshipLabel>会計マスタ</relationshipLabel>
        <relationshipName>BookingEstimateItemzeBO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GoukeinoneTax__c</fullName>
        <formula>Tankanonetax__c * Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$合計金額（税抜）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GuestType__c</fullName>
        <label>ラックレート明細（プラン種別）</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>一般</fullName>
                </value>
                <value>
                    <fullName>会員</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InvoiceNoShowFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>請求書に該当商品情報を明細に非表示する</description>
        <label>請求書非表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NoShowRequestFlg__c</fullName>
        <description>該当項目値は「１」する場合、会計編集画面からお客様は手動に非表示に設定する</description>
        <label>非表示手動請求フラグ</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoneAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>このレコードを集計の対象としない場合は、チェックを入れてください</inlineHelpText>
        <label>集計対象外</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OES__c</fullName>
        <label>OES用ﾒﾆｭｰ</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会計OP</label>
        <referenceTo>OP__c</referenceTo>
        <relationshipLabel>会計マスタ</relationshipLabel>
        <relationshipName>BookingEstimateItemSUow</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OptionNo__c</fullName>
        <description>機能処理用項目、業務利用不可</description>
        <label>オプション商品グループNo（システム用）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OptionPlanKey__c</fullName>
        <description>機能処理用項目、業務利用不可</description>
        <formula>IF ( 
      ISBLANK(OptionNo__c),
      &apos;&apos;, 
     ( refBooking__c
       &amp; &apos;_&apos;  
       &amp; refAccountMaster__c
       &amp; &apos;_&apos;  
       &amp; OptionNo__c
       &amp; &apos;_&apos;
       &amp; TEXT(SplitGroupNo__c)
       &amp; &apos;_&apos; 
       &amp; Text( Total__c / IF ( NULLVALUE (Amount__c, 0)  == 0, 1, Amount__c))
      )
)</formula>
        <label>$オプション商品グループNo（システム用）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OptionTotal__c</fullName>
        <description>機能処理用項目、業務利用不可</description>
        <label>オプション商品合計金額（システム用）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderDate__c</fullName>
        <label>発注日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Orderer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>発注者</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>予約見積明細</relationshipLabel>
        <relationshipName>BookingEstimateItemhHV6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PLU__c</fullName>
        <label>PLUｺｰﾄﾞ</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentBookingItemRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>親予約見積明細</label>
        <referenceTo>BookingEstimateItem__c</referenceTo>
        <relationshipLabel>予約見積明細</relationshipLabel>
        <relationshipName>ParentBookingItemRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentType__c</fullName>
        <label>支払種別</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanBrkInfo__c</fullName>
        <label>プラン明細情報定義(システム用)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PlanDetailSyncInfo__c</fullName>
        <description>見積明細編集画面、直接入力のプラン明細の単価を格納する、該当項目で、明細自動作成・更新する場合、該当単価で、明細へ連携更新を行う 
Format: プラン明細ID/見積明細ID:単価;プラン明細ID/見積明細ID:単価 書式で複数件格納する（最大600件明細格納可能です）</description>
        <label>プラン明細個別設定情報</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PlanRefreshFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ロジックコントロール用、画面に使わないください
該当フラグを変更すると、見積明細の商品は変更なくでも、SYNCにより、プラン明細を再度設定を行う</description>
        <label>プラン明細自動展開(システム用)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <label>商品名称（または券名称）</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuotationName__c</fullName>
        <label>見積宛名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReservedTypeCal__c</fullName>
        <formula>TEXT(refBooking__r.ReservedType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$予約タイプ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReservedType__c</fullName>
        <label>予約タイプ</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomNameCal__c</fullName>
        <formula>BLANKVALUE(refBooking__r.Rroom__r.Name, &apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$お部屋名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomName__c</fullName>
        <label>お部屋名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RowNo__c</fullName>
        <label>RowNo.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_5__c</fullName>
        <inlineHelpText>セットメニューのインデックス番号、セットメニュー群は最大50個まで</inlineHelpText>
        <label>SCP(5)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SelectFoodt__c</fullName>
        <label>食事</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>朝</fullName>
                </value>
                <value>
                    <fullName>昼</fullName>
                </value>
                <value>
                    <fullName>夕</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SelectFoodtime__c</fullName>
        <label>食事時間</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SelectFoodt__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>6:00</fullName>
                </value>
                <value>
                    <fullName>6:30</fullName>
                </value>
                <value>
                    <fullName>7:00</fullName>
                </value>
                <value>
                    <fullName>7:30</fullName>
                </value>
                <value>
                    <fullName>8:00</fullName>
                </value>
                <value>
                    <fullName>9:00</fullName>
                </value>
                <value>
                    <fullName>9:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>20:30</fullName>
                </value>
                <value>
                    <fullName>21:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ServiceRate__c</fullName>
        <description>サービス料金（％）</description>
        <label>サービス料(%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ShopCodeCal__c</fullName>
        <formula>refBooking__r.refTypeOfRooms__r.ShopInfoRef__r.ShopCode__c</formula>
        <label>店舗コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpTotal__c</fullName>
        <label>#合計金額</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SpecialTax__c</fullName>
        <defaultValue>0</defaultValue>
        <label>特別税</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SplitGroupNo__c</fullName>
        <label>分割NO</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>発注先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>予約見積明細</relationshipLabel>
        <relationshipName>BookingEstimateItem6Vui</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SysSelBasePlanNums__c</fullName>
        <label>プラン一括選択数量(システム用)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TankanonetaxNew__c</fullName>
        <label>単価(税抜)(増税対応)(システム用)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tankanonetax__c</fullName>
        <formula>/*if ( OR(ISNULL(TaxRate__c),  TaxRate__c == 0),  UnitPrice__c , CEILING(UnitPrice__c/(1 + TaxRate__c)) )*/
/*
    // 1:税込、サービス料抜き
    // 2:税込、サービス料込
    // 3:税抜、サービス料抜き
    // 4:税抜、サビース料込
*/
/* 2014/08/06 EDIT
Case ($Setup.CommDefine__c.UnitPriceDefKb__c ,
1, CEILING( UnitPrice__c / ( 1 +  NULLVALUE (TaxRate__c, 0) ) ),
2, CEILING( UnitPrice__c / ( (1 + NULLVALUE (TaxRate__c, 0) ) * ( 1 + NULLVALUE (ServiceRate__c, 0) ) ) ), 
3, UnitPrice__c ,
0)
*/
/* 2015/10/15 EDIT
Case (
VALUE( UnitPriceDefKbCal__c) ,
1, CEILING( UnitPrice__c * ( 1 + NULLVALUE (ServiceRate__c, 0) ) / ( 1 + NULLVALUE (TaxRate__c, 0) ) ),
2, CEILING( UnitPrice__c / ( 1 + NULLVALUE (TaxRate__c, 0) ) ),
3, CEILING( UnitPrice__c * ( 1 + NULLVALUE (ServiceRate__c, 0) ) ),
0)
*/
/* 2016/04/13 EDIT 
Case (
VALUE( ps__UnitPriceDefKbCal__c) ,
1, CEILING( ps__UnitPrice__c * ( 1 + NULLVALUE (ps__ServiceRate__c, 0) ) / ( 1 + NULLVALUE (ps__TaxRate__c, 0) ) ),
2, CEILING( ps__UnitPrice__c / ( 1 + NULLVALUE (ps__TaxRate__c, 0) ) ),
3, CEILING( ps__UnitPrice__c * ( 1 + NULLVALUE (ps__ServiceRate__c, 0) ) ),
4, ps__UnitPrice__c,
0)
*/
/* 2019/07/30 軽減税率機能対応 WGCH BEGIN */
IF (NULLVALUE (TankanonetaxNew__c, 0) != 0, TankanonetaxNew__c,
/* 2019/07/30 軽減税率機能対応 WGCH END */
IF (NULLVALUE (TankawithoutTaxSys__c, 0) != 0, TankawithoutTaxSys__c, 

IF ( 
$Setup.CommDefine__c.AccountNoTaxCalFlg__c != true || 
$Setup.CommDefine__c.RoundType__c = 2, 
Case ( 
VALUE( UnitPriceDefKbCal__c ) , 
1, CEILING( UnitPrice__c * ( 1 + NULLVALUE (ServiceRate__c, 0) ) / ( 1 + NULLVALUE (TaxRate__c, 0) ) ), 
2, CEILING( UnitPrice__c / ( 1 + NULLVALUE (TaxRate__c, 0) ) ), 
3, CEILING( UnitPrice__c * ( 1 + NULLVALUE (ServiceRate__c, 0) ) ), 
4, CEILING( UnitPrice__c), 
0) 
, 
IF($Setup.CommDefine__c.RoundType__c = 0, 
Case ( 
VALUE( UnitPriceDefKbCal__c ) , 
1, FLOOR( UnitPrice__c * ( 1 + NULLVALUE (ServiceRate__c, 0) ) / ( 1 + NULLVALUE (TaxRate__c, 0) ) ), 
2, FLOOR( UnitPrice__c / ( 1 + NULLVALUE (TaxRate__c, 0) ) ), 
3, FLOOR( UnitPrice__c * ( 1 + NULLVALUE (ServiceRate__c, 0) ) ), 
4, FLOOR( UnitPrice__c ), 
0) 
, 
Case ( 
VALUE( UnitPriceDefKbCal__c ) , 
1, ROUND( UnitPrice__c * ( 1 + NULLVALUE (ServiceRate__c, 0) ) / ( 1 + NULLVALUE (TaxRate__c, 0) ) , 0), 
2, ROUND( UnitPrice__c / ( 1 + NULLVALUE (TaxRate__c, 0) ) , 0), 
3, ROUND( UnitPrice__c * ( 1 + NULLVALUE (ServiceRate__c, 0) ) , 0), 
4, ROUND( UnitPrice__c , 0), 
0) 
) 
) 

)
/* 2019/07/30 軽減税率機能対応 WGCH BEGIN */
)
/* 2019/07/30 軽減税率機能対応 WGCH END */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$単価(税抜)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TankawithoutTaxSys__c</fullName>
        <inlineHelpText>画面、レポートなど使わない、システム内部利用項目</inlineHelpText>
        <label>単価(税抜)（システム用）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxRate__c</fullName>
        <label>消費税</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>NULLVALUE(SpTotal__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$合計金額(税込)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TriggerIsStopFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>トリガー処理対象外（システム用）</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TypeOfRoomNameCal__c</fullName>
        <formula>BLANKVALUE(refBooking__r.refTypeOfRooms__r.Name, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$部屋タイプ名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeOfRoomName__c</fullName>
        <label>部屋タイプ名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitPriceDefKbCal__c</fullName>
        <formula>BLANKVALUE(UnitPriceDefKb__c, refBooking__r.UnitPriceDefKbCal__c )</formula>
        <label>$会計商品単価定義区分</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitPriceDefKb__c</fullName>
        <defaultValue>TEXT($Setup.CommDefine__c.UnitPriceDefKb__c)</defaultValue>
        <label>会計商品単価定義区分</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <inlineHelpText>空欄のまま保存すると、会計商品で定義した単価が設定されます</inlineHelpText>
        <label>単価</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UseDateCal__c</fullName>
        <formula>IF ( ($Setup.CommDefine__c.AccountSaleDateSetupDiv__c != &apos;1&apos;
&amp;&amp; !$Setup.CommDefine__c.BookEstUseDateSetupFlg__c ), refBooking__r.Departure__c, refBooking__r.EntryTime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$利用日</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UseDate__c</fullName>
        <label>利用日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1__c</fullName>
        <label>名称1(ｶﾅ)</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2_1__c</fullName>
        <label>名称2(漢1)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3_2__c</fullName>
        <label>名称3(漢2)</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X4_3__c</fullName>
        <label>名称4(漢3)</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>refAccountMaster__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>商品を選択して下さい</inlineHelpText>
        <label>商品名</label>
        <referenceTo>AccountMaster__c</referenceTo>
        <relationshipLabel>予約見積明細</relationshipLabel>
        <relationshipName>BookingEstimateItemhSGP</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>refBooking__c</fullName>
        <label>ご予約</label>
        <referenceTo>Lead__c</referenceTo>
        <relationshipLabel>予約見積明細</relationshipLabel>
        <relationshipName>BookingEstimateItemFgKu</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>unitPriceIncTaxCal__c</fullName>
        <formula>/* 合計金額（税込）「Total__c」-特別税/数量＝単価（税込） */ 
(Total__c - SpecialTax__c) / (IF(Amount__c ==0, 1, Amount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$単価(税込)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>予約見積明細</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>予約見積明細#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>